[tool.poetry]
name = "sparql-parser"
version = "0.1.0"
description = ""
authors = ["Edmond Chuc <edmond@kurrawong.ai>"]
readme = "README.md"
packages = [{include = "sparql_parser"}]

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
