[tool.poetry]
name = "sparql"
version = "0.1.0"
description = "This package provides parsers and serializers for the SPARQL 1.1 Query Language."
license = "MIT"
authors = ["Edmond Chuc <edmond@kurrawong.ai>"]
readme = "README.md"
packages = [{include = "sparql"}]

[tool.poetry.dependencies]
python = "^3.12"
lark = "^1.1.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.12.1"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = [
    "I001",
    "I002"
]
